--- a/Extra-file/blog.html
+++ b/Extra-file/blog.html
@@ -20,7 +20,7 @@
             <li><a href="#">Blog</a></li>
             <li><a href="videos.html">Videos</a></li>
             <li><a href="contact.html">Contact us</a></li>
-            <li><a href="#">about Ud</a></li>
+            <li><a href="about.html">about us</a></li>
         </ul>
 
     </nav>
