--- a/Extra-file/contact.html
+++ b/Extra-file/contact.html
@@ -19,7 +19,7 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="videos.html">Videos</a></li>
             <li><a href="#">Contact us</a></li>
-            <li><a href="#">about Ud</a></li>
+            <li><a href="about.html">about us</a></li>
         </ul>
 
     </nav>
