--- a/Extra-file/videos.html
+++ b/Extra-file/videos.html
@@ -21,7 +21,7 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="#">Videos</a></li>
             <li><a href="contact.html">Contact us</a></li>
-            <li><a href="#">about Ud</a></li>
+            <li><a href="about.html">about us</a></li>
         </ul>
 
     </nav>
