--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="Extra-file/blog.html">Blog</a></li>
             <li><a href="Extra-file/videos.html">Videos</a></li>
             <li><a href="Extra-file/contact.html">Contact us</a></li>
-            <li><a href="#">about Ud</a></li>
+            <li><a href="Extra-file/about.html">about us</a></li>
         </ul>
 
     </nav>
